grid align and some fixes

--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,6 @@ body {
     font-weight: 300;
     font-size: 14px;
     color: #413D4B;
-    line-height: 22;
     
     background: #FFF;
 }
@@ -163,7 +162,6 @@ h5 {
     height: 670px;
     position: relative;
 
-    text-align: center;
     color: #FFF;
 
     background-image: linear-gradient(to right, rgba(9, 5, 47, .85),rgba(49, 29, 94, .85)), url(../img/image-header.jpg);
@@ -210,7 +208,11 @@ h5 {
     color: #00e0d0;
 }
 
-.header-main h1 {
+.header-bottom {
+    text-align: center;
+}
+
+.header-bottom h1 {
     padding-bottom: 25px;
     font-size: 32px;
     font-weight: 900;
@@ -223,7 +225,7 @@ h5 {
     background-color: #00e0d0;
 }
 
-.header-main p {
+.header-bottom p {
     margin: 0;
     padding: 0;
     padding-top: 30px;
